--- a/packages/backend/.env
+++ b/packages/backend/.env
@@ -1,2 +1,2 @@
-SPOTIFY_CLIENT_ID='......'
-SPOTIFY_CLIENT_SECRET='....'
+SPOTIFY_CLIENT_ID='2b2def47ecb54ed8853520f73cc83d2b'
+SPOTIFY_CLIENT_SECRET='3bc83df795f44b5aae4af2efec0fb918'
